--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
 <body>
 
   <!-- JS -->
-  <script src="app/js/vendor/jquery-3.1.1.min.js"></script>
-  <script src="app/js/vendor/tether.js"></script>
-  <script src="app/js/vendor/bootstrap.js"></script>
-  <script src="app/js/vendor/underscore-min.js"></script>
-  <script src="app/js/vendor/backbone.js"></script>
+  <script src="app/js/lib/jquery-3.1.1.min.js"></script>
+  <script src="app/js/lib/tether.js"></script>
+  <script src="app/js/lib/bootstrap.js"></script>
+  <script src="app/js/lib/underscore-min.js"></script>
+  <script src="app/js/lib/backbone.js"></script>
   <script src="app/js/app.js"></script>
 </body>
 </html>
